--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "nodemon": "^1.18.4"
   },
   "dependencies": {
-    "cores": "^0.8.5",
+    "cors": "^2.8.4",
     "express": "^4.16.4",
     "helmet": "^3.14.0",
     "knex": "^0.15.2",
