Renamed Main File
#Comment

Renamed main file in package.json as 'server.js'

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Abdul Ahmad",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon server.js"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
